[package]
name = "an_logger"
version = "0.1.3"
edition = "2021"
authors = ["AuTsing <763025696@qq.com>"]
license = "MIT"
description = "Android log initializer"
homepage = "https://github.com/AuTsing/an_logger"
repository = "https://github.com/AuTsing/an_logger"
readme = "README.md"

[dependencies]
log = "0.4"
android_logger = "0.11.1"
jni = "0.20.0"
libc = "0.2.84"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.4.0"
